--- a/package.json
+++ b/package.json
@@ -1,43 +1,15 @@
 {
-	"name": "notebook",
-	"version": "0.1.0",
+	"name": "notebooks",
+	"version": "2.0.0",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
-		"core-js": "^3.6.4",
-		"vue": "^2.6.11",
-		"vue-focus-visible": "^2.1.0",
-		"vue-router": "^3.1.6"
+		"dev": "astro dev",
+		"lint": "eslint .",
+		"build": "astro build"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "~4.2.0",
-		"@vue/cli-plugin-eslint": "~4.2.0",
-		"@vue/cli-service": "~4.2.0",
-		"babel-eslint": "^10.0.3",
-		"eslint": "^6.7.2",
-		"eslint-plugin-vue": "^6.1.2",
-		"vue-template-compiler": "^2.6.11"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended"
-		],
-		"parserOptions": {
-			"parser": "babel-eslint"
-		},
-		"rules": {}
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions"
-	]
+		"astro": "^1.9.1",
+		"autoprefixer": "^10.4.13",
+		"eslint-config-goodbyte-styleguide-typescript": "^0.0.4"
+	}
 }
