--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "astro build"
 	},
 	"devDependencies": {
-		"astro": "^1.9.1",
+		"astro": "^2.0.0-beta.2",
 		"autoprefixer": "^10.4.13",
 		"eslint-config-goodbyte-styleguide-typescript": "^0.0.4"
 	}
