--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"astro": "^2.0.0-beta.2",
 		"autoprefixer": "^10.4.13",
-		"eslint-config-goodbyte-styleguide-typescript": "^0.0.4"
+		"eslint-config-goodbyte-styleguide-typescript": "^0.0.4",
+		"@resvg/resvg-js": "^2.2.0"
 	}
 }
